@@ -2,6 +2,17 @@
 
 	Merged bugfix from trunk
 
+	* include/functions_visual_map.php: added function "createInternalNameItem"
+	and "get_items_parents".
+	
+	*include/ajax/visual_console_builder.ajax.php, 
+	godmode/reporting/visual_console_builder.editor.php: changed the method to
+	show items without name in visualmap as parents in the selectbox.
+
+2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk
+
 	* include/ajax/visual_console_builder.ajax.php: fixed the position of
 	items "icons".
 
